--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Selorm Komla Darkey
-#logo: 
+logo: assets/images/head_logo_image.jpg
 # Description
 # show_downloads: false
 theme: jekyll-theme-minimal
